--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
   },
   "scripts": {
     "start": "npm run build & node server.js",
-    "dev": "node server.js & watchify index.jsx -p browserify-hmr -o public/bundle.js -dv",
-    "build": "NODE_ENV=production browserify index.jsx | uglifyjs -cm > public/bundle.js -dv"
+    "dev": "node server.js & watchify index.jsx -p browserify-hmr -o public/bundle.js",
+    "build": "NODE_ENV=production browserify index.jsx | uglifyjs -cm > public/bundle.js"
   },
   "author": "Zoltan Dosa",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
-    "browserify-hmr": "^0.3.5",
-    "uglify-js": "^2.8.15",
-    "watchify": "^3.9.0"
+    "babel-preset-es2015": "latest",
+    "babel-preset-react": "latest",
+    "babelify": "latest",
+    "browserify": "latest",
+    "browserify-hmr": "latest",
+    "uglify-js": "latest",
+    "watchify": "latest"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0"
+    "express": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-router-dom": "latest"
   }
 }
