--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         {
           "presets": [
             "es2015",
-            "react"
+            "react",
+            "stage-3"
           ]
         }
       ]
@@ -24,6 +25,7 @@
     "babel-core": "latest",
     "babel-preset-es2015": "latest",
     "babel-preset-react": "latest",
+    "babel-preset-stage-3": "^6.24.1",
     "babelify": "latest",
     "browserify": "latest",
     "browserify-hmr": "latest",
@@ -36,6 +38,8 @@
     "react-dom": "latest",
     "react-redux": "^5.0.6",
     "react-router-dom": "latest",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   }
 }
