--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-router-dom": "latest",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   }
 }
